<resources>
    <string name="app_name">PMSystem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="login_here">Login here.</string>
    <string name="already_a_user">Already a user?\u0020</string>
    <string name="lowercase_last_name">last name</string>
    <string name="lowercase_first_name">last name</string>
    <string name="lowercase_address">address</string>
    <string name="lowercase_email">email</string>
    <string name="lowercase_mobile">mobile</string>
    <string name="lowercase_password">password</string>

    <string name="from">From</string>
    <string name="origin">Origin</string>
    <string name="to">To</string>
    <string name="destination">Destination</string>
    <string name="search_buses">SEARCH BUSES</string>
    <string name="journey_date">Journey Date</string>
    <string name="submit">Submit</string>
    <string name="enter_the_email_address_that_you_registered_with_and_we_will_send_you_the_instructions_to_reset_your_password">
        Enter the email address that you registered with and we will send you the instructions to reset your password
    </string>
    <string name="email_phone_no">Email/Phone No.</string>

    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="pnr_number">PNR Number</string>
    <string name="date">date</string>
    <string name="lowercase_origin">origin</string>
    <string name="lowercase_destination">destination</string>

    <string name="place_an_order">Place an order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="seat_selection">Seat Selection</string>
    <string name="show_map">Show\n map</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password">Forgot Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">Payment</string>


    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="create_project">Create Project</string>
    <string name="project_name">Project Name</string>
    <string name="project_status">Project Status</string>
    <string name="project_description">Project Description</string>
    <string name="bottom_nav_exception_message">must implement BottomNavClickListener</string>
    <string name="create_task">Create Task</string>
    <string name="create">Create</string>
    <string name="description">Description :</string>
    <string name="task_status">Task Status :</string>
    <string name="task_name">Task Name :</string>
    <string name="project_id">Project Id:</string>
    <string name="start_date_yyyy_mm_dd">Start Date :yyyy-mm-dd</string>
    <string name="end_date_yyyy_mm_dd">End Date :yyyy-mm-dd</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="task_id">Task Id:</string>
    <string name="sub_task_name">Sub Task Name</string>
    <string name="sub_task_status">Sub Task Status</string>
</resources>
