<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="20dp">

    <EditText
            android:id="@+id/et_create_task_project_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/project_id"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/et_create_task_status"
            app:layout_constraintStart_toStartOf="@+id/et_create_task_status"
            app:layout_constraintTop_toTopOf="parent" />
    <EditText
            android:id="@+id/et_create_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/et_create_task_status"
            app:layout_constraintStart_toStartOf="@+id/et_create_task_status"
            app:layout_constraintTop_toBottomOf="@id/et_create_task_project_id" />

    <EditText
            android:id="@+id/et_create_task_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_status"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/et_create_task_description"
            app:layout_constraintStart_toStartOf="@+id/et_create_task_description"
            app:layout_constraintTop_toBottomOf="@+id/et_create_task_name" />

    <EditText
            android:id="@+id/et_create_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/et_create_task_start_date"
            app:layout_constraintStart_toStartOf="@+id/et_create_task_start_date"
            app:layout_constraintTop_toBottomOf="@+id/et_create_task_status" />

    <EditText
            android:id="@+id/et_create_task_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/start_date_yyyy_mm_dd"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="@+id/et_create_task_end_date"
            app:layout_constraintStart_toStartOf="@+id/et_create_task_end_date"
            app:layout_constraintTop_toBottomOf="@+id/et_create_task_description" />

    <EditText
            android:id="@+id/et_create_task_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/end_date_yyyy_mm_dd"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_create_task_start_date" />

    <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="142dp"
            android:layout_marginRight="142dp"
            android:text="@string/create"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_create_task_end_date"
             style="@style/AppButton"/>
</android.support.constraint.ConstraintLayout>