<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppPadding"
    tools:context=".CreateProjectFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_project_id_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/project_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_project_id_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_project_task_id_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_id"
        app:layout_constraintTop_toBottomOf="@+id/create_project_id_til">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_project_task_id_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_project_sub_task_name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sub_task_name"
        app:layout_constraintTop_toBottomOf="@+id/create_project_task_id_til"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_project_sub_task_name_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_project_sub_task_status_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sub_task_status"
        app:layout_constraintTop_toBottomOf="@+id/create_project_sub_task_name_til"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_project_sub_task_status_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_project_sub_task_desc_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Sub Task Description"
        app:layout_constraintTop_toBottomOf="@id/create_project_sub_task_status_til"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_project_sub_task_desc_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_project_sub_task_start_date_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        app:layout_constraintTop_toBottomOf="@id/create_project_sub_task_desc_til"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_project_sub_task_start_date_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/create_project_sub_task_end_data_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        app:layout_constraintTop_toBottomOf="@id/create_project_sub_task_start_date_til"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/create_project_sub_task_end_date_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create_sub_task_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/create_project_sub_task_end_data_til"
        android:text="@string/create" />

</android.support.constraint.ConstraintLayout>
