<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
            style="@style/AppPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/register_first_name_til"
                style="@style/AuthnTextInputLayoutStyle"
                android:hint="@string/first_name"
                app:layout_constraintBottom_toTopOf="@+id/register_last_name_til"
                app:layout_constraintTop_toBottomOf="parent"
                tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_first_name_tiet"
                    style="@style/WidthMatchParentHeightWrapContent"
                    android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/register_last_name_til"
                style="@style/AuthnTextInputLayoutStyle"
                android:hint="@string/last_name"
                app:layout_constraintBottom_toTopOf="@+id/register_companysize_til"
                app:layout_constraintTop_toBottomOf="@+id/register_first_name_til"
                tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_last_name_tiet"
                    style="@style/WidthMatchParentHeightWrapContent"
                    android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/register_companysize_til"
                style="@style/AuthnTextInputLayoutStyle"
                android:hint="CompanySize"
                app:layout_constraintBottom_toTopOf="@+id/register_email_til"
                app:layout_constraintTop_toBottomOf="@+id/register_last_name_til"
                tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_companysize_tiet"
                    style="@style/WidthMatchParentHeightWrapContent"
                    android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/register_email_til"
                style="@style/AuthnTextInputLayoutStyle"
                android:hint="@string/email"
                app:layout_constraintBottom_toTopOf="@+id/register_mobile_til"
                app:layout_constraintTop_toBottomOf="@+id/register_companysize_til"
                tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_email_tiet"
                    style="@style/WidthMatchParentHeightWrapContent"
                    android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/register_mobile_til"
                style="@style/AuthnTextInputLayoutStyle"
                android:hint="@string/mobile"
                app:layout_constraintBottom_toTopOf="@+id/register_password_til"
                app:layout_constraintTop_toBottomOf="@+id/register_email_til"
                tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_mobile_tiet"
                    style="@style/WidthMatchParentHeightWrapContent"
                    android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>





        <android.support.design.widget.TextInputLayout
                android:id="@+id/register_password_til"
                style="@style/AuthnTextInputLayoutStyle"
                android:hint="@string/password"
                app:layout_constraintBottom_toTopOf="@+id/register_role_til"
                app:layout_constraintTop_toBottomOf="@+id/register_mobile_til"
                tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_password_tiet"
                    style="@style/WidthMatchParentHeightWrapContent"
                    android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>






        <android.support.design.widget.TextInputLayout
                android:id="@+id/register_role_til"
                style="@style/AuthnTextInputLayoutStyle"
                android:hint="role"
                app:layout_constraintBottom_toTopOf="@+id/register_sign_up_btn"
                app:layout_constraintTop_toBottomOf="@+id/register_password_til"
                tools:ignore="MissingConstraints">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_role_tiet"
                    style="@style/WidthMatchParentHeightWrapContent"
                    android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
                android:id="@+id/register_sign_up_btn"
                style="@style/AuthButtonStyle"
                android:text="@string/sign_up"
                app:layout_constraintTop_toBottomOf="@+id/register_role_til"
                tools:ignore="MissingConstraints" />

        <LinearLayout
                style="@style/WidthMatchParentHeightWrapContent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/register_sign_up_btn"
                tools:ignore="MissingConstraints">

            <TextView
                    android:id="@+id/register_alread_a_user_tv"
                    style="@style/AuthMessageTextStyle"
                    android:text="@string/already_a_user"
                    tools:ignore="MissingConstraints" />

            <TextView
                    android:id="@+id/register_login_here_tv"
                    style="@style/AuthMessageTextStyle"
                    android:text="@string/login_here"
                    app:layout_constraintStart_toEndOf="@+id/register_alread_a_user_tv"
                    tools:ignore="MissingConstraints" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>